Avoid crashing with MultiEffect

Seems that on some cases updateEffectShaders() can be reached before
m_shaderEffect exists. So check this.

Task-number: QTBUG-117830
Pick-to: 6.6 6.5
Change-Id: I55aff305eefa6150275032e859728bf62fdbeb28
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>